<resources>
    <string name="app_name">Лабораторная №3 : Книги</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authors_label">Автор(ы):</string>
    <string name="bookname_label">Название книги:</string>
    <string name="publisher_label">Издательство:</string>
    <string name="publishyear_label">Год издания:</string>
    <string name="pagecount_label">Количество страниц:</string>
    <string name="binding_label">Переплет:</string>
    <string name="price_label">Цена:</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="publisher_switch">Издатель</string>
</resources>